[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
axum = { "version" = "0.6", features = ["tower-log"] }


# Utility Crates
anyhow = "1.0"
async-trait = "0.1.73"
dotenv = "0.15.0"
env_logger = "0.10.0"
itertools = "0.11.0"
log = "0.4.20"
rand = "0.8.5"
thiserror = "1.0.49"
