[package]
name = "backend"
version = "0.1.0"
edition = "2021"


[dependencies]
futures = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
axum = { "version" = "0.6", features = ["tower-log"] }


anyhow = "1.0"
async-trait = "0.1"
dotenv = "0.15"
env_logger = "0.10"
itertools = "0.11"
log = "0.4"
rand = "0.8"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
tracing-subscriber = "0.3"
tracing = "0.1"
